--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "conectandomongoexpress",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "1.0.0", 
+  "description": "Aplicación con Node.js, Express y MongoDB",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test-db": "node test-conexion.js"
   },
-  "keywords": [],
+  "keywords": ["nodejs", "express", "mongodb"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "mongoose": "^8.18.0",
+    "mongoose": "^8.18.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
